--- a/src/index.css
+++ b/src/index.css
@@ -791,7 +791,9 @@ footer {
     background: radial-gradient(90.84% 51.46% at 12.16% 50%, rgba(38, 38, 38, 0.20) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(243.33% 331.01% at 100% 100%, rgba(250, 225, 0, 0.10) 0%, rgba(103, 93, 0, 0.01) 56.25%), rgba(0, 0, 0, 0.10);
     box-shadow: 2px 2px 4px 0px #212121 inset, -2px -2px 4px 0px #25251F inset, 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
     padding: 20px;
+    
     padding-bottom: 50px;
+    padding-top: 100px;
 }
 
 .sms {
@@ -4994,6 +4996,7 @@ height: 27px;
     box-shadow: 2px 2px 4px 0px #212121 inset, -2px -2px 4px 0px #25251F inset, 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
     padding: 20px;
     padding-bottom: 50px;
+    padding-top: 70px;
 }
 #Iconss{
    display: flex;
