--- a/src/index.css
+++ b/src/index.css
@@ -5146,7 +5146,7 @@ height: 27px;
     width: 34px;
     height: 69px;
     background-size: contain;
-    /* background-image: url("../public/bg-triangle.svg"); */
+    background-image: url("./public/bg-triangle.svg");
   }
 
   .Free_trail_box{
