--- a/src/index.css
+++ b/src/index.css
@@ -703,7 +703,7 @@ footer {
 }
 
 .footer_info_follow_img a i:hover {
-    color: var(--color-yellow);
+    color: linear-gradient(90deg, rgba(190,158,68,1) 0%, rgba(216,198,144,1) 100%);;
     transform: scale(1.1);
 }
 
@@ -999,7 +999,7 @@ box-shadow: 2px 2px 4px 0px #212121 inset, -2px -2px 4px 0px #25251F inset, 10px
     display: flex;
     width: 100%;
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center;
     gap: 30px;
     padding-bottom: 10px;
     /* overflow-x: scroll !important; */
@@ -1726,9 +1726,9 @@ input:checked+.slider:before {
 .right_info_ticket {
     display: flex;
     align-items: center;
-    gap: 20px;
+    /* gap: 20px; */
     margin-top: 20px;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .right_info_ticket .switch {
