--- a/src/(root)/CustomerAccount/index.css
+++ b/src/(root)/CustomerAccount/index.css
@@ -44,7 +44,7 @@ padding: 20px;
 }
 .event_like_box{
     border-radius: 10px;
-background: radial-gradient(188% 88.98% at 3.98% 3.45%, rgba(38, 38, 38, 0.60) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(243.33% 331.01% at 100% 100%, rgba(250, 225, 0, 0.10) 0%, rgba(103, 93, 0, 0.01) 56.25%), rgba(0, 0, 0, 0.10);
+background: radial-gradient(188% 88.98% at 3.98% 3.45%, rgba(38, 38, 38, 0.60) 0%, rgba(0, 0, 0, 0.00) 100%), radial-gradient(243.33% 331.01% at 100% 100%, rgba(250, 225, 0, 0.10) 0%, rgba(25, 22, 0, 0.01) 56.25%), rgba(0, 0, 0, 0.10);
 box-shadow: 2px 2px 4px 0px #212121 inset, -2px -2px 4px 0px #25251F inset, 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
 padding: 30px;
 display: flex;
@@ -58,6 +58,7 @@ flex-direction: column;
     justify-content: center;
     gap: 20px;
     padding: 20px;
+    /* flex-wrap: wrap; */
 }
 .event_Organizer{
     display: flex;
