--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -121,6 +121,75 @@ nav {
   font-size: 12px;
 }
 
+
+
+.hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: -100;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger-lines .line {
+  display: block;
+  height: 2px;
+  width: 100%;
+  border-radius: 10px;
+  background: white;
+}
+
+.hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+.checkbox7 {
+  /* position: absolute; */
+  display: block;
+  height: 32px;
+  width: 32px;
+  /* top: 20px;
+  left: 20px; */
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+
+
+
+
+.menu-btn input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+
 @media (max-width: 1064px) {
   .logo_nav {
     width: 214.7404px;
