--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -178,7 +178,7 @@ nav {
 }
 
 .menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
+  transform: rotate(45deg) scaleX(0.9);;
 }
 
 .menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
@@ -186,7 +186,7 @@ nav {
 }
 
 .menu-btn input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: rotate(-45deg);
+  transform: rotate(-45deg) scaleX(0.93);;
 }
 
 
