--- a/src/(root)/Events/index.css
+++ b/src/(root)/Events/index.css
@@ -87,6 +87,8 @@ background: radial-gradient(79.36% 84.72% at -61.47% 22.46%, rgba(99, 99, 99, 0.
 .event_card_img {
     width: 100%;
     height: 240px;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 786px) {
