--- a/src/(root)/SingleEvent/index.css
+++ b/src/(root)/SingleEvent/index.css
@@ -371,11 +371,17 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
     color: white;
     background: none;
     border: 1px solid white;
-    margin-top: -10px;
+    /* margin-top: -10px ; */
   }
 
   .counter-value {
-    font-size: 24px;
+    font-size: 16px;
+    width: 30px;
+    text-align: center;
+    background: white;
+    color: #000;
+    border-radius: 25px;
+    padding: 2px;
     /* margin: 0 20px; */
   }
   .sell_tickets_warp2{
@@ -399,8 +405,9 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
     gap: 20px;
 }
 .Ticket_p{
-    margin-left: 170px;
-    margin-top: 30px;
+    margin-left: 160px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 .sell_tickets_box_in {
   display: flex;
