--- a/src/(root)/MyPurchases/index.css
+++ b/src/(root)/MyPurchases/index.css
@@ -79,6 +79,7 @@ padding: 20px;
     margin-top: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
+    cursor: pointer;
 }
 @media screen and (max-width: 860px) {
     /* .manage_filter_tablee{ */
