--- a/src/index.css
+++ b/src/index.css
@@ -963,6 +963,7 @@ box-shadow: 2px 2px 4px 0px #212121 inset, -2px -2px 4px 0px #25251F inset, 10px
     border: 1px solid #be9e44;
     background: linear-gradient(90deg, rgba(190, 158, 68, 1) 0%, rgba(216, 198, 144, 1) 100%);
     transition: all ease-in-out 0.3s;
+    font-size: 16px !important;
 }
 .tab_btnn:hover{
     color: white;
@@ -3734,6 +3735,7 @@ height: 27px;
     width: 60%;
     margin: auto;
     color: #000;
+    font-size: 16px;
 }
 
 .add_venue form input {
