--- a/src/(root)/CustomerAccount/index.css
+++ b/src/(root)/CustomerAccount/index.css
@@ -141,6 +141,7 @@ gap: 10px;
     }
     .upcoming_action{
         width: 400px;
+        height: fit-content;
     }
     .setting_box_inp{
         gap: 10px;
