--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -37,7 +37,7 @@ nav {
   padding: 10px !important;
   font-size: 16px;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 400 !important;
   border: 2px solid transparent;
 }
 
