--- a/src/(root)/SingleEvent/index.css
+++ b/src/(root)/SingleEvent/index.css
@@ -345,7 +345,12 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
   }
 
   .counter-btn {
-    padding: 4px 10px;
+    /* padding: 4px 10px; */
+    height: 25px;
+    width: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* margin: 0 10px; */
     font-size: 18px;
     cursor: pointer;
@@ -372,16 +377,21 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
     background: none;
     border: 1px solid white;
     /* margin-top: -10px ; */
+    padding-bottom: 2px;
   }
 
   .counter-value {
     font-size: 16px;
-    width: 30px;
+    width: 40px;
     text-align: center;
     background: white;
     color: #000;
     border-radius: 25px;
     padding: 2px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* margin: 0 20px; */
   }
   .sell_tickets_warp2{
