--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -37,18 +37,18 @@ nav {
   padding: 10px !important;
   font-size: 16px;
   text-decoration: none;
-  font-weight: 400 !important;
+  /* font-weight: 400 !important; */
   border: 2px solid transparent;
 }
 
 .navs-links li a:hover {
   /* color: var(--color-yellow); */
   transition: all ease-in-out 0.25s;
-  background: linear-gradient(90deg, rgba(190, 158, 68, 1) 0%, rgba(216, 198, 144, 1) 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-weight: 500;
+  /* background: linear-gradient(90deg, rgba(190, 158, 68, 1) 0%, rgba(216, 198, 144, 1) 100%); */
+  /* -webkit-background-clip: text; */
+  /* background-clip: text; */
+  color: #cbb26a;
+  /* font-weight: 500; */
 }
 
 .li_active {
