--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -38,15 +38,12 @@ nav {
   font-size: 16px;
   text-decoration: none;
   /* font-weight: 400 !important; */
-  border: 2px solid transparent;
+  border: 2px solid transparent !important;
 }
 
 .navs-links li a:hover {
   /* color: var(--color-yellow); */
   transition: all ease-in-out 0.25s;
-  /* background: linear-gradient(90deg, rgba(190, 158, 68, 1) 0%, rgba(216, 198, 144, 1) 100%); */
-  /* -webkit-background-clip: text; */
-  /* background-clip: text; */
   color: #cbb26a !important;
   /* font-weight: 500; */
   background: none !important;
@@ -59,7 +56,7 @@ nav {
   background: linear-gradient(90deg, rgba(190, 158, 68, 1) 0%, rgba(216, 198, 144, 1) 100%);
   color: #000 !important;
   transition: all ease-in-out 0.25s !important;
-  border: 1px solid ;
+  border: 1px solid transparent;
   border-color: transparent;
 } 
 
