--- a/src/(root)/SingleEvent/index.css
+++ b/src/(root)/SingleEvent/index.css
@@ -229,7 +229,7 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
     flex-direction: column;
     margin-right: 0px;
     /* margin-top: 40px; */
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 
 .get_ticket_carti {
@@ -334,7 +334,8 @@ box-shadow: 2px 2px 4px 0px rgba(75, 75, 75, 0.75), 4px 4px 4px 0px rgba(71, 71,
 
 
 .cart_btns {
-    margin-top: 400px;
+    /* margin-top: -30px; */
+    margin-bottom: 25px;
 }
 
 .counter-container {
